--- a/src/main/webapp/WEB-INF/jsp/usr/common/head.jspf
+++ b/src/main/webapp/WEB-INF/jsp/usr/common/head.jspf
@@ -19,64 +19,112 @@
 <script src="/resource/common.js" defer="defer"></script>
 </head>
 <body>
-  <header>
-    <div class="h-20 flex container mx-auto">
-      <a href="/" class="flex items-center px-3">
-        <span>로고</span>
-      </a>
-      
-      <div class="flex-grow"></div>
-      
-      <ul class="flex">
-        <li>
-          <a class="h-full flex px-3 items-center hover:underline" href="/">
-           <span>홈</span>
-          </a>
-        </li>
-        <li>
-          <a class="h-full flex px-3 items-center hover:underline" href="/usr/article/write">
-            <span>게시글 작성</span>
-          </a>
-        </li>
-        <li>
-          <a class="h-full flex px-3 items-center hover:underline" href="/usr/article/list?boardId=1">
-            <span>공지사항 게시판</span>
-          </a>
-        </li>        
-        <li>
-          <a class="h-full flex px-3 items-center hover:underline" href="/usr/article/list?boardId=2">
-            <span>자유 게시판</span>
-          </a>
-        </li>      
-        <c:if test="${!rq.logined}">
-          <li>
-            <a class="h-full flex px-3 items-center hover:underline" href="${rq.loginUri}">
-              <span>로그인</span>
-            </a>
-          </li>
-       
-          <li>
-            <a class="h-full flex px-3 items-center hover:underline" href="${rq.joinUri}">
-              <span>회원가입</span>
-            </a>
-          </li>
-        </c:if>
-        
-        <c:if test="${rq.logined}">
-         <li>
-            <a class="h-full flex px-3 items-center hover:underline" href="/usr/member/myPage">
-              <span>${rq.loginedMember.nickname}'s Profile</span>
-           </a>
-         </li>
-         <li>
-            <a class="h-full flex px-3 items-center hover:underline" href="${rq.logoutUri}">
-              <span>로그아웃</span>
-           </a>
-         </li>
-        </c:if>
-      </ul>
+  <header class="top-bar top-bar--fly">
+    <div class="container mx-auto flex h-full">
+        <a href="/" class="px-3 flex items-center logo">
+            <span>
+                <i class="fab fa-ember"></i>
+            </span>
+            <span class="hidden sm:block">&nbsp;Blog</span>
+        </a>
+
+        <div class="flex-grow"></div>
+
+        <nav class="menu-box-1">
+            <ul class="flex h-full gnb">
+                <li>
+                    <a href="/" class="h-full flex items-center px-5">
+                        <span>
+                            <i class="fas fa-home"></i>
+                        </span>
+                        <span class="hidden sm:block">&nbsp;홈</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="/usr/article/write" class="h-full flex items-center px-5">
+                        <span>
+                            <i class="fas fa-pen"></i>
+                        </span>
+                        <span class="hidden sm:block">&nbsp;작성</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="h-full flex items-center px-5">
+                        <span>
+                            <i class="far fa-newspaper"></i>
+                        </span>
+                        <span class="hidden md:block">&nbsp;게시판</span>
+                    </a>
+                    <div>
+                        <h1>
+                            <a href="#">
+                                <span>
+                                    <i class="far fa-newspaper"></i>
+                                </span>
+                                <span>&nbsp;게시판</span>
+                            </a>
+                        </h1>
+                        <ul>
+                            <li>
+                                <a href="../article/list?boardId=1">
+                                    <span>
+                                        <i class="far fa-clipboard"></i>
+                                    </span>
+                                    <span>&nbsp;공지사항</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="../article/list?boardId=2">
+                                    <span>
+                                        <i class="far fa-clipboard"></i>
+                                    </span>
+                                    <span>&nbsp;자유게시판</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </li>
+                <c:if test="${rq.logined}">
+                <li>
+                    <a href="${rq.logoutUri}" class="h-full flex items-center px-5">
+                        <span>
+                            <i class="fas fa-sign-out-alt"></i>
+                        </span>
+                        <span class="hidden md:block">&nbsp;로그아웃</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="../member/myPage" class="h-full flex items-center px-5">
+                        <span>
+                            <i class="fas fa-sign-out-alt"></i>
+                        </span>
+                        <span class="hidden md:block">&nbsp;${rq.loginedMember.nickname}＇s 페이지</span>
+                    </a>
+                </li>
+                </c:if>
+                <c:if test="${!rq.logined}">
+                <li>
+                    <a href="${rq.loginUri}" class="h-full flex items-center px-5">
+                        <span>
+                            <i class="fas fa-sign-in-alt"></i>
+                        </span>
+                        <span class="hidden md:block">&nbsp;로그인</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="${rq.joinUri}" class="h-full flex items-center px-5">
+                        <span>
+                            <i class="fas fa-user"></i>
+                        </span>
+                        <span class="hidden md:block">&nbsp;회원가입</span>
+                    </a>
+                </li>
+                </c:if>
+            </ul>
+        </nav>
     </div>
-  </header>
+</header>
+
 
   <section class="title">
     <div class="container mx-auto px-3">
