--- a/src/main/resources/static/resource/common.css
+++ b/src/main/resources/static/resource/common.css
@@ -429,7 +429,45 @@ box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #
 	transform: translate(-50%, -60%);
 	height: 400px;
 }
-#footerwraplogin {
+/* 로그인폼 끝 */
+/* 아이디 찾기 시작 */
+.f_loginId {
+	position: absolute;
+	top: 60%;
+	left: 55%;
+	transform: translate(-50%, -60%);
+	height: 400px;
+}
+/* 아이디 찾기 끝 */
+/* 비밀번호 찾기 시작 */
+.f-loginPw {
+	position: absolute;
+	top: 55%;
+	left: 50%;
+	transform: translate(-50%, -60%);
+	height: 400px;
+}
+/* 비밀번호 찾기 끝 */
+/* 비밀번호 확인 폼 시작 */
+.checkPassword {
+	position: absolute;
+	top: 60%;
+	left: 50%;
+	transform: translate(-50%, -60%);
+	height: 400px;
+}
+/* 비밀번호 확인 폼 끝 */
+/* 회원정보수정 폼 시작 */
+.member_modify {
+	position: absolute;
+	top: 30%;
+	left: 50%;
+	transform: translate(-50%, -30%);
+	height: 400px;
+}
+/* 회원정보수정 폼 끝 */
+/* 로그인, 아이디, 비밀번호 찾기, 비밀번호 확인, 마이 페이지 footer 시작 */
+#footerwrap_member {
     width: 100%;
     height: 230px;
     background: #3d3d3d;
@@ -475,7 +513,7 @@ box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #
         line-height: 30px;
         left: 40%;
 }
-.footerlogo-login {
+.footerlogo_member {
 	background: url(img/logo.jpg) no-repeat;
 	background-size: cover;
 	position: absolute;
@@ -484,4 +522,4 @@ box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #
 	top: 28%;
 	left: 29%;
 }
-/* 로그인폼 끝 */
+/* 로그인, 아이디, 비밀번호 찾기, 비밀번호 확인, 마이 페이지 footer 끝 */
